--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -32,7 +32,7 @@
       />
     </div>
     <div class="mt-4 mb-4 text-center">
-      <button class="gsi-material-button">
+      <button class="gsi-material-button" (click)="loginWithGoogle()">
         <div class="gsi-material-button-state"></div>
         <div class="gsi-material-button-content-wrapper">
           <div class="gsi-material-button-icon">
