--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   data-bs-theme="dark"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">RAG-Explorer</a>
+    <a class="navbar-brand" href="#" routerLink="/">RAG-Explorer</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -39,7 +39,7 @@
             href="#"
             routerLink="/home"
             (click)="closeNavbar()"
-            >Testuj</a
+            >Dashboard</a
           >
         </li>
       </ul>
