--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -56,7 +56,7 @@ input:-webkit-autofill:focus {
   box-sizing: border-box;
   color: #1f1f1f;
   cursor: pointer;
-  font-family: 'Roboto', arial, sans-serif;
+  font-family: "Roboto", arial, sans-serif;
   font-size: 14px;
   height: 40px;
   letter-spacing: 0.25px;
@@ -73,6 +73,7 @@ input:-webkit-autofill:focus {
   width: auto;
   max-width: 400px;
   min-width: min-content;
+  pointer-events: none; /* Disable pointer events by default*/
 }
 
 .gsi-material-button .gsi-material-button-icon {
@@ -99,7 +100,7 @@ input:-webkit-autofill:focus {
 .gsi-material-button .gsi-material-button-contents {
   -webkit-flex-grow: 1;
   flex-grow: 1;
-  font-family: 'Roboto', arial, sans-serif;
+  font-family: "Roboto", arial, sans-serif;
   font-weight: 500;
   overflow: hidden;
   text-overflow: ellipsis;
