--- a/src/app/home-auth/home-auth.component.css
+++ b/src/app/home-auth/home-auth.component.css
@@ -210,6 +210,9 @@
 }
 
 @media (max-width: 576px) {
+  .display-4 {
+    font-size: 2rem;
+  }
   .input-group {
     flex-direction: column;
   }
@@ -217,6 +220,7 @@
   .query-input {
     border-radius: 15px;
     margin-bottom: 1rem;
+    width: 100%;
   }
 
   .btn-query {
