Some btns styling

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -32,7 +32,11 @@
       />
     </div>
     <div class="mt-4 mb-4 text-center">
-      <button class="gsi-material-button" (click)="loginWithGoogle()">
+      <button
+        type="button"
+        class="gsi-material-button"
+        (click)="loginWithGoogle()"
+      >
         <div class="gsi-material-button-state"></div>
         <div class="gsi-material-button-content-wrapper">
           <div class="gsi-material-button-icon">
